--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
-    background-color:darkturquoise;
+    background-color: darkturquoise;
+}
+
+#container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.pokemon {
+    border: 5px solid darkblue;
+    border-radius: 25px;
+    padding: 5px;
+    margin: 10px;
 }
