Added CSS to Forms Button

--- a/style.css
+++ b/style.css
@@ -17,5 +17,14 @@ body {
 }
 
 a {
-    color: darkblue;
+    color: white;
+    background-color: red;
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+input {
+    margin: 15px;
 }
