--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     padding: 5px;
     margin: 10px;
     max-width: 210px;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 a {
@@ -23,9 +24,17 @@ a {
     border: 3px solid black;
     border-radius: 25px;
     padding: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 input {
     margin: 15px;
+}
+
+h1 {
+    font-family: 'Titillium Web', sans-serif;
+}
+
+label {
+    font-family: 'Titillium Web', sans-serif;
 }
